--- a/SimTECH/SimTECH/Pages/Racing/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Landing.razor
@@ -7,7 +7,110 @@
                 </MudStack>
             </MudPaper>
         </MudItem>
-        <MudItem xs="3">
+        <MudItem xs="8">
+            <MudPaper Class="pa-4 mud-height-full">
+                <MudTable Items="@Model.RaweCeekDrivers.OrderBy(e => e.Grid)" Dense="true" Class="extra-dense">
+                    <ToolBarContent>
+                        <MudText Typo="Typo.h5">Starting grid</MudText>
+                    </ToolBarContent>
+                    <HeaderContent>
+                        <MudTh Class="number-col-lg">POS</MudTh>
+                        <MudTh Class="number-col">Grid</MudTh>
+                        <MudTh Class="accent-cell"></MudTh>
+                        <MudTh Style="max-width: 220px">Name</MudTh>
+                        <MudTh Class="number-col">NO</MudTh>
+                        <MudTh Style="max-width: 220px">Team</MudTh>
+                        <MudTh Class="number-col">SUPP</MudTh>
+                        <MudTh>
+                            @if (Model.Race.State == State.Closed)
+                            {
+                                <span>PTS</span>
+                            }
+                            else
+                            {
+                                <span>Tyre</span>
+                            }
+                        </MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd Class="number-col-lg">
+                            @if (context.Status == RaceStatus.Racing)
+                            {
+                                <DriverPosition Number="@context.Position" />
+                            }
+                            else
+                            {
+                                <div class="result-cell" style="@(context.Status.StatusStyles())">
+                                    <MudText Typo="Typo.caption" Color="Color.Inherit">@context.Status.ReadableStatus()</MudText>
+                                </div>
+                            }
+
+                            @if (context.Penalty.HasValue)
+                            {
+                                <MudBadge Content="@($"+{context.Penalty.Value}")"
+                                          Color="Color.Error"
+                                          Origin="Origin.CenterRight"
+                                          BadgeClass="ml-1">
+                                    <sup>x</sup>
+                                </MudBadge>
+                            }
+                        </MudTd>
+                        <MudTd Class="number-col">
+                            <MudText Typo="Typo.caption">@context.Grid</MudText>
+                        </MudTd>
+                        <MudTd Class="accent-cell">
+                            <SmolAccent Colour="@context.Colour" />
+                        </MudTd>
+                        <MudTd Class="overflow-hider">
+                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                <MudText>@context.FullName</MudText>
+                                @if (context.Grid == 1)
+                                {
+                                    <sup style="font-size: 0.7rem">P</sup>
+                                }
+                                @if (context.FastestLap)
+                                {
+                                    <sup style="font-size: 0.7rem">F</sup>
+                                }
+                            </MudStack>
+                        </MudTd>
+                        <MudTd Class="number-col">
+                            <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
+                        </MudTd>
+                        <MudTd>
+                            <MudText>@context.TeamName</MudText>
+                        </MudTd>
+                        <MudTd Class="number-col">
+                            <SupplierDisplay Colour="@context.ManufacturerColour" Accent="@context.ManufacturerAccent">
+                                @context.ManufacturerName.ElementAt(0)
+                            </SupplierDisplay>
+                        </MudTd>
+                        <MudTd>
+                            @if (Model.Race.State == State.Closed)
+                            {
+                                @if (context.Incident != null)
+                                {
+                                    <MudText Typo="Typo.button" Color="Color.Warning">@context.Incident.Name</MudText>
+                                }
+                                else
+                                {
+                                    <MudText Typo="Typo.caption">???</MudText>
+                                }
+                            }
+                            else
+                            {
+                                <MudLink OnClick="@(async () => await HandleTyrePicker(context.ResultId))">
+                                    <TyreElement Colour="@context.Tyre.Colour">
+                                        @context.Tyre.Name.ElementAt(0)
+                                    </TyreElement>
+                                </MudLink>
+                            }
+                        </MudTd>
+                    </RowTemplate>
+                </MudTable>
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="2">
             <MudPaper Class="pa-4 mud-height-full">
                 <MudText Typo="Typo.h5">Track information</MudText>
                 <MudDivider />
@@ -64,77 +167,13 @@
                 }
             </MudPaper>
         </MudItem>
-        <MudItem xs="6">
-            <MudPaper Class="pa-4 mud-height-full">
-                <MudTable Items="@Model.RaweCeekDrivers.OrderBy(e => e.Grid)" Dense="true" Class="extra-dense">
-                    <ToolBarContent>
-                        <MudText Typo="Typo.h5">Starting grid</MudText>
-                    </ToolBarContent>
-                    <HeaderContent>
-                        <MudTh>Grid</MudTh>
-                        <MudTh Class="pa-0" Style="width: 5px"></MudTh>
-                        <MudTh>Name</MudTh>
-                        <MudTh Class="number-col">NO.</MudTh>
-                        <MudTh>Team</MudTh>
-                        <MudTh Class="number-col">SUPP</MudTh>
-                        <MudTh>Tyre</MudTh>
-                    </HeaderContent>
-                    <RowTemplate>
-                        <MudTd>
-                            @if (context.Grid > Model.Season.MaximumDriversInRace)
-                            {
-                                <MudText Typo="Typo.caption">DNQ</MudText>
-                            }
-                            else
-                            {
-                                @if (context.Penalty.HasValue)
-                                {
-                                    <MudBadge Content="@($"+{context.Penalty.Value}")"
-                                              Color="Color.Error"
-                                              Origin="Origin.CenterRight"
-                                              BadgeClass="ml-1">
-                                        <DriverPosition Number="@context.Grid" />
-                                    </MudBadge>
-                                }
-                                else
-                                {
-                                    <DriverPosition Number="@context.Grid" />
-                                }
-                            }
-                        </MudTd>
-                        <MudTd Class="accent-cell">
-                            <SmolAccent Colour="@context.Colour" />
-                        </MudTd>
-                        <MudTd>
-                            <MudText>@context.FullName</MudText>
-                        </MudTd>
-                        <MudTd Class="number-col">
-                            <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
-                        </MudTd>
-                        <MudTd>
-                            <MudText>@context.TeamName</MudText>
-                        </MudTd>
-                        <MudTd Class="number-col">
-                            <SupplierDisplay Colour="@context.ManufacturerColour" Accent="@context.ManufacturerAccent">
-                                @context.ManufacturerName.ElementAt(0)
-                            </SupplierDisplay>
-                        </MudTd>
-                        <MudTd>
-                            <MudLink OnClick="@(async () => await HandleTyrePicker(context.ResultId))">
-                                <TyreElement Colour="@context.Tyre.Colour">
-                                    @context.Tyre.Name.ElementAt(0)
-                                </TyreElement>
-                            </MudLink>
-                        </MudTd>
-                    </RowTemplate>
-                </MudTable>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="3">
+        <MudItem xs="2">
             <MudPaper Class="pa-4 mud-height-full">
                 <MudText Typo="Typo.h5">???</MudText>
                 <MudDivider />
                 <MudText Typo="Typo.body2" Color="Color.Error" Class="mb-1">Wtf am I going to put here?</MudText>
+
+                <MudText Color="Color.Warning">TODO: upcoming penalties</MudText>
             </MudPaper>
         </MudItem>
     </MudGrid>
