--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -16,58 +16,81 @@
 <PageTitle>Raweceek</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
-    @if (!loading)
-    {
-        @*<MudPaper Height="75px">
-            <MudStack Row="true" Justify="Justify.Center">
-                <MudText Typo="Typo.h3">@RaweCeek.Race.Name</MudText>
-            </MudStack>
+    <MudPaper Elevation="100">
+        @if (!loading)
+        {
+            @*<MudPaper Height="75px">
+        <MudStack Row="true" Justify="Justify.Center">
+        <MudText Typo="Typo.h3">@RaweCeek.Race.Name</MudText>
+        </MudStack>
         </MudPaper>*@
-        <CascadingValue Value="@RaweCeek">
-            <MudTabs @ref="_tabs" Border="true" Centered="true" Outlined="true">
-                <MudTabPanel Text="Raweceek">
-                    <Landing TrackTraits="@trackTraits"
-                             OnOpenTyrePicker="PickRaceTyre"/>
-                </MudTabPanel>
-                @for (int i = 1; i <= practiceCompleted; i++)
-                {
-                    var j = i;
-                    <MudTabPanel Text="@($"FP{j}")" ID="@($"fp_{j}")">
-                        <Practice PracticeIndex="@j"
-                                  PracticeScores="@practiceScores"
-                                  Config="@config" />
+            <CascadingValue Value="@RaweCeek">
+                <MudTabs @ref="_tabs" Centered="true" Outlined="true">
+                    <MudTabPanel Text="Raceweek">
+                        <Landing TrackTraits="@trackTraits"
+                                 OnOpenTyrePicker="PickRaceTyre" />
                     </MudTabPanel>
-                }
-                @if (RaweCeek.Race.State != State.Advanced && RaweCeek.Race.State != State.Closed)
-                {
-                    <MudTabPanel Text="@($"FP{nextPractice}")" ID="@($"fp_{nextPractice}")">
-                        <Practice PracticeIndex="@nextPractice"
-                                  PracticeScores="@practiceScores"
-                                  Config="@config"
-                                  OnFinish="PersistPractice" />
+                    <MudTabPanel Text="Practice">
+                        <MudTabs Centered="true" Outlined="true">
+                            @for (int i = 1; i <= practiceCompleted; i++)
+                            {
+                                var j = i;
+                                <MudTabPanel Text="@($"FP{j}")" ID="@($"fp_{j}")">
+                                    <Practice PracticeIndex="@j"
+                                              PracticeScores="@practiceScores"
+                                              Config="@config" />
+                                </MudTabPanel>
+                            }
+                            @if (RaweCeek.Race.State != State.Advanced && RaweCeek.Race.State != State.Closed)
+                            {
+                                <MudTabPanel Text="@($"FP{nextPractice}")" ID="@($"fp_{nextPractice}")">
+                                    <Practice PracticeIndex="@nextPractice"
+                                              PracticeScores="@practiceScores"
+                                              Config="@config"
+                                              OnFinish="PersistPractice" />
+                                </MudTabPanel>
+                            }
+                        </MudTabs>
                     </MudTabPanel>
-                }
-                @for (int i = 1; i <= qualySessions; i++)
-                {
-                    var j = i;
-                    <MudTabPanel Text="@($"Q{j}")" Icon="@Icons.Material.Filled.AccessTime" ID="@($"q_{j}")">
-                        <Qualifying QualifyingIndex="@j"
-                                    QualifyingScores="@qualyScores"
-                                    Config="@config"
-                                    OnFinish="PersistQualifying" />
+                    <MudTabPanel Text="Qualifying">
+                        @if (qualySessions > 1)
+                        {
+                            <MudTabs @ref="_qualyTabs" Centered="true" Outlined="true">
+                                @for (int i = 1; i <= qualySessions; i++)
+                                {
+                                    var j = i;
+                                    <MudTabPanel Text="@($"Q{j}")" Icon="@Icons.Material.Filled.AccessTime" ID="@($"q_{j}")">
+                                        <Qualifying QualifyingIndex="@j"
+                                                    QualifyingScores="@qualyScores"
+                                                    Config="@config"
+                                                    OnFinish="PersistQualifying" />
+                                    </MudTabPanel>
+                                }
+                            </MudTabs>
+                        }
+                        else
+                        {
+                            <Qualifying QualifyingIndex="1"
+                                        QualifyingScores="@qualyScores"
+                                        Config="@config"
+                                        OnFinish="PersistQualifying" />
+                        }
                     </MudTabPanel>
-                }
-                <MudTabPanel Text="Race" Disabled="@raceDisabled">
-                    <Race LapScores="@lapScores"
-                          Occurrences="@occurrences"
-                          Incidents="@incidents"
-                          Tyres="@tyres"
-                          Config="@config"
-                          OnFinish="PersistRace" />
-                </MudTabPanel>
-            </MudTabs>
-        </CascadingValue>
-    }
+                    <MudTabPanel Text="Race" Disabled="@raceDisabled">
+                        <Race LapScores="@lapScores"
+                              Occurrences="@occurrences"
+                              Incidents="@incidents"
+                              Tyres="@tyres"
+                              Config="@config"
+                              OnFinish="PersistRace" />
+                    </MudTabPanel>
+                    <MudTabPanel Text="Post race" Disabled="@postraceDisabled">
+                        <PostRace />
+                    </MudTabPanel>
+                </MudTabs>
+            </CascadingValue>
+        }
+    </MudPaper>
 </MudContainer>
 
 @code {
@@ -89,11 +112,11 @@
     private SimConfig config;
 
     MudTabs _tabs;
+    MudTabs _qualyTabs;
 
     bool loading = true;
     bool raceDisabled = true;
-    bool postraceDisabled = true;
-    string nextSession = "None";
+    bool postraceDisabled => RaweCeek.Race.State == State.Closed;
     int practiceCompleted;
     int nextPractice = 1;
     int qualySessions;
@@ -353,7 +376,9 @@
             }
 
             var nextQ = 1 + qualyIndex;
-            _tabs.ActivatePanel($"q_{nextQ}");
+
+            if (qualySessions > 1)
+                _qualyTabs.ActivatePanel($"q_{nextQ}");
         }
     }
 
